--- a/WPFDemo/MainWindow.xaml
+++ b/WPFDemo/MainWindow.xaml
@@ -5,8 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPFDemo"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="Our WPF Demo" Height="450" Width="800">
+    <Grid Margin="0,2,0,-2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="20"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="auto" MinWidth="120"/>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="20"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="20"/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Column="1" Grid.Row="1" FontSize="28">
+            Hello World
+        </TextBlock>
+        <Button Content="Button" Grid.Column="4" HorizontalAlignment="Left" Margin="207,126,0,0" Grid.Row="4" VerticalAlignment="Top" Width="93" Height="55" Click="Button_Click"/>
+        <TextBlock Grid.Column="4" HorizontalAlignment="Left" Margin="66,54,0,0" Grid.Row="4" TextWrapping="Wrap" Text="FirstName" VerticalAlignment="Top" Height="26" Width="69" RenderTransformOrigin="0.515,1.247"/>
+        <TextBox x:Name="firstNameText" Grid.Column="4" HorizontalAlignment="Left" Height="23" Margin="180,44,0,0" Grid.Row="4" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.508,1.415"/>
+        <ComboBox x:Name="myComboBox" Grid.Column="2" Grid.Row="4" Grid.ColumnSpan="3" Width="150" Margin="10,126,445,161">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding FullName}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
     </Grid>
 </Window>
